--- a/NewInvoice/NewInvoice/Views/bill/addmangertobill.cshtml
+++ b/NewInvoice/NewInvoice/Views/bill/addmangertobill.cshtml
@@ -39,6 +39,7 @@
                         </select>
                         <input type="submit" value="send" />
                     </form>
+                    <a href="/bill/done?numbill=@item.invoicenumber"> <input type="button" value="done"/></a>
                 }
             </td>
         </tr>
