--- a/NewInvoice/NewInvoice/Views/bill/Addbill.cshtml
+++ b/NewInvoice/NewInvoice/Views/bill/Addbill.cshtml
@@ -22,11 +22,19 @@
     <select name="Vendors">
         @{foreach (var item in ViewBag.vendors)
             {
-                <option value="@item.name"> (@item.name)</option>
+                <option value="@item.vendornumber"> (@item.name)</option>
             }
         }
     </select>
     <br />
-
+    <label>mangers</label>
+    <select name="mangers" multiple="true">
+        @{foreach (var item in ViewBag.manger)
+            {
+                <option value="@item.id"> (@item.name) </option>
+            }
+        }
+    </select>
+    <br />
     <input type="submit" value="send" />
 </form>
