--- a/NewInvoice/NewInvoice/Views/My/myinvoice.cshtml
+++ b/NewInvoice/NewInvoice/Views/My/myinvoice.cshtml
@@ -21,7 +21,7 @@
             @Html.DisplayNameFor(model => model.state)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.creator_key)
+            @Html.DisplayNameFor(model => model.creator.id)
         </th>
         <th></th>
     </tr>
@@ -38,7 +38,7 @@
             @Html.DisplayFor(modelItem => item.state)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.creator_key)
+            @Html.DisplayFor(modelItem => item.creator.id)
         </td>
         <td>
           
