--- a/NewInvoice/NewInvoice/Views/bill/Addbill.cshtml
+++ b/NewInvoice/NewInvoice/Views/bill/Addbill.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Addbill";
 }
 
-<form method="post">
+<form method="post" enctype="multipart/form-data">
     <label>Invoicenumber</label>  <input type="text" name="invoicenumber" />
     <br />
     <label>Value</label>          <input type="number" name="value" />
@@ -26,8 +26,30 @@
             }
         }
     </select>
+
     <br />
-    <label>mangers</label>
+    <label>Purchase Order</label>
+    <select name="purchaseorders">
+        @{foreach (var item in ViewBag.purchaseorders)
+            {
+                <option value="@item.ordernumber"> (@item.ordernumber)</option>
+            }
+        }
+    </select>
+    <br />
+    <br />
+    <label>Projects</label>
+    <select name="projects">
+        @{foreach (var item in ViewBag.projects)
+            {
+                <option value="@item.projectnumber"> (@item.projectnumber)</option>
+            }
+        }
+    </select>
+    <br />
+    <label>document</label><input type="file" name="files" multiple />
+    <br />
+    <label>managers</label>
     <select name="mangers" multiple="true">
         @{foreach (var item in ViewBag.manger)
             {
@@ -36,5 +58,6 @@
         }
     </select>
     <br />
+
     <input type="submit" value="send" />
 </form>
